<resources>
    <string name="app_name">UrduCanvas</string>
    <string name="app_name_pro">UrduCanvas Pro</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="server_client_id">262118457778-vbkhl67en4464tieb8dd5s8e5l96067n.apps.googleusercontent.com</string>
    <string name="lorem_ispum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore</string>
    <string name="login">Login</string>
    <string name="email_username">Email / Username</string>
    <string name="password">Password</string>
    <string name="forget_password">Forget Password</string>
    <string name="don_t_have_account">Don’t have account?</string>
    <string name="signup">Signup</string>
    <string name="register">Register</string>
    <string name="lock_canvas_pan">Lock canvas pan</string>
    <string name="lock_group">Lock group</string>
    <string name="unlock_group">Unlock group</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="verify_email">Verify Email</string>
    <string name="already_have_account">Already have account?</string>
    <string name="verification">Verification</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="resend_code">Resend Code</string>
    <string name="verify">Verify</string>
    <string name="create">Create</string>
    <string name="resize">Resize</string>
    <string name="size">Size</string>
    <string name="canvas_size">Canvas Size</string>
    <string name="background">Background</string>
    <string name="canvas_size_value">%1$d × %2$d</string>
    <string name="open_with_urdu_canvas">Open in Urdu Canvas</string>
    <string name="templates">Templates</string>
    <string name="saved">Saved</string>
    <string name="categories">Categories</string>
    <string name="poster_design">Poster Design</string>
    <string name="post_design">Post Design</string>
    <string name="story_design">Story Design</string>
    <string name="trending">Trending</string>
    <string name="eid_milad_un_nabi">Eid Milad-un-Nabi</string>
    <string name="all">All</string>
    <string name="favorites">Favorites</string>
    <string name="social_media_post_design">Social media post design</string>
    <string name="banner">Banner</string>
    <string name="_3_10_24">3/10/24</string>
    <string name="select_size">Select Size</string>
    <string name="custom">Custom</string>
    <string name="width">Width</string>
    <string name="height">Height</string>
    <string name="pixels">Pixels</string>
    <string name="predefined_sizes">Predefined Sizes</string>
    <string name="billboard">Billboard</string>
    <string name="_00_x_00">00 x 00</string>
    <string name="text">Text</string>
    <string name="backgrounds">Backgrounds</string>
    <string name="images">Images</string>
    <string name="media">Media</string>
    <string name="objects">Objects</string>
    <string name="elements">Elements</string>
    <string name="edit">Edit</string>
    <string name="_0_0">0.0</string>
    <string name="layers">Layers</string>
    <string name="layer_properties">Layer Properties</string>
    <string name="text_properties">Text Properties</string>
    <string name="table_properties">Table Properties</string>
    <string name="shape_properties">Shape Properties</string>
    <string name="image_properties">Image Properties</string>
    <string name="sticker_properties">Sticker Properties</string>
    <string name="opacity">Opacity</string>
    <string name="urdu_fonts">Urdu Fonts</string>
    <string name="english_fonts">English Fonts</string>
    <string name="font_size">Font Size</string>
    <string name="plus">+</string>
    <string name="text_alignment">Text Alignment</string>
    <string name="search_here">Search here</string>
    <string name="type_here">Type here</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="add_text">Add Text</string>
    <string name="border_width">Border width</string>
    <string name="shadow_x">Shadow X</string>
    <string name="shadow_y">Shadow Y</string>
    <string name="line_spacing">Line Spacing</string>
    <string name="letter_spacing">Letter Spacing</string>
    <string name="paragraph_indentation">Paragraph Indent</string>
    <string name="list_style">List Style</string>
    <string name="solid">Solid</string>
    <string name="gradient">Gradient</string>
    <string name="inner">Inner</string>
    <string name="outer">Outer</string>
    <string name="radius">Radius</string>
    <string name="blur_radius">Blur Radius</string>
    <string name="blending_options">Blending Options</string>
    <string name="align_to_canvas">Align to Canvas</string>
    <string name="align_to_selection">Align to Selection</string>
    <string name="align_left_description">Align left edges</string>
    <string name="align_right_description">Align right edges</string>
    <string name="align_center_horizontal_description">Align horizontal centers</string>
    <string name="align_center_vertical_description">Align vertical centers</string>
    <string name="align_top_description">Align top edges</string>
    <string name="align_bottom_description">Align bottom edges</string>
    <string name="layer_name">Layer name</string>
    <string name="properties">Properties</string>
    <string name="blending">Blending</string>
    <string name="lock">Lock</string>
    <string name="unlock">Unlock</string>
    <string name="lock_all">Lock All</string>
    <string name="unlock_all">Unlock All</string>
    <string name="visibility">Visibility</string>
    <string name="hide">Hide</string>
    <string name="show">Show</string>
    <string name="hide_all">Hide All</string>
    <string name="show_all">Show All</string>
    <string name="delete">Delete</string>
    <string name="delete_permanently">Delete permanently</string>
    <string name="confirm_delete">Confirm Delete</string>
    <string name="delete_n_layers">Delete %1$d layers?</string>
    <string name="delete_layer">Delete layer?</string>
    <string name="selected_n_layers">%1$d selected</string>
    <string name="choose_blend_mode">Choose Blend Mode</string>
    <string name="layer_more_options">More options</string>
    <string name="drag_to_rearrange">Drag to rearrange</string>
    <string name="copy">Copy</string>
    <string name="blend">Blend</string>
    <string name="color_picker">Color Picker</string>
    <string name="scale">Scale</string>
    <string name="angle">Angle</string>
    <string name="gradient_color_selector">Gradient Color Selector</string>
    <string name="gradient_editor">Gradient Editor</string>
    <string name="sweep">Sweep</string>
    <string name="radial">Radial</string>
    <string name="linear">Linear</string>
    <string name="location">Location</string>
    <string name="gradient_setting">Gradient Setting</string>
    <string name="gradient_type">Gradient Type</string>
    <string name="sweep_angle">Sweep Angle</string>
    <string name="horizontal">Horizontal</string>
    <string name="vertical">Vertical</string>
    <string name="center_y">Center Y</string>
    <string name="center_x">Center X</string>
    <string name="colors">Colors</string>
    <string name="import_from_gallery">Import from gallery</string>
    <string name="we_couldn_t_find_this_one">We couldn\'t find this one</string>
    <string name="add">Add</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="dashboard">Dashboard</string>
    <string name="recent_projects">Recent Projects</string>
    <string name="untitled_design">Untitled Design</string>
    <string name="_10_02_2025">10/02/2025</string>
    <string name="_6_mb">6 MB</string>
    <string name="export_settings">Export Settings</string>
    <string name="resolution">Resolution</string>
    <string name="file_size">File Size</string>
    <string name="format">Format</string>
    <string name="png">PNG</string>
    <string name="_1_2_mb">1.2 MB</string>
    <string name="_1920_1080">1920×1080</string>
    <string name="quality">Quality</string>
    <string name="exporting">Exporting...</string>
    <string name="processing_your_file">Processing your file</string>
    <string name="export_summary">Export Summary</string>
    <string name="estimated">Estimated</string>
    <string name="_4_8_mb">~4.8 MB</string>
    <string name="_4k_medium_quality_png">4K • Medium Quality • PNG</string>
    <string name="default_">Default</string>
    <string name="reset">Reset</string>
    <string name="export">Export</string>
    <string name="hd">HD</string>
    <string name="standard_quality">Standard Quality</string>
    <string name="_2_5_mb">~2.5 MB</string>
    <string name="high_quality">High Quality</string>
    <string name="_100">100%</string>
    <string name="_20">+20%</string>
    <string name="lossless_with_transparency">Lossless with transparency</string>
    <string name="transparency">Transparency</string>
    <string name="no_artifacts">No Artifacts</string>
    <string name="larger_size">Larger size</string>
    <string name="estimating_size">Estimating size...</string>
    <string name="tap_to_edit">Tap to Edit</string>
    <string name="preview">Preview</string>
    <string name="export_complete">Export Complete</string>
    <string name="export_successful">Export Successful!</string>
    <string name="your_file_has_been_exported_and_is_ready_to_use">Your file has been exported and is ready to use</string>
    <string name="export_1753699627928_png">export_1753699627928.png</string>
    <string name="png_file">PNG File</string>
    <string name="file_details">File Details</string>
    <string name="file_name">File Name</string>
    <string name="file_location">File Location</string>
    <string name="storage_emulated_0_download_export_1">/storage/emulated/0/Download/export_1</string>
    <string name="exported_on_jul_28_2025_03_47_am">Exported on Jul 28, 2025, 03:47 AM</string>
    <string name="quick_actions">Quick Actions</string>
    <string name="share">Share</string>
    <string name="save">Save</string>
    <string name="open">Open</string>
    <string name="export_tips">Export Tips</string>
    <string name="exportTip_image">Your image has been saved in your Gallery inside the Urdu Canvas folder. You can also access it using the path shown above.</string>
    <string name="exportTip_pdf">Your file has been saved in your Documents/Urdu Canvas folder. You can also access it using the path shown above.</string>
    <string name="export_another">Re-edit</string>
    <string name="go_home">Go Home</string>
    <string name="kashida_frequency">Kashida Length</string>
    <string name="import_font">Import Font</string>
    <string name="group_all">Group All</string>
    <string name="un_group_all">Ungroup All</string>
    <string name="auto_saving_changes">Saving changes …</string>
    <string name="loading_project">Loading project …</string>
    <string name="upload_photo">Add Photo</string>
    <string name="upload_and_edit">Upload &amp; edit</string>
    <string name="blank_canvas">New Canvas</string>
    <string name="start_designing">Start designing</string>
    <string name="duplicate">Duplicate</string>
    <string name="rename">Rename</string>
    <string name="my_files">Assets</string>
    <string name="select">Select</string>
    <string name="normal">Normal</string>
    <string name="source">Source</string>
    <string name="darken">Darken</string>
    <string name="lighten">Lighten</string>
    <string name="multiply">Multiply</string>
    <string name="screen">Screen</string>
    <string name="draw">Draw</string>
    <string name="stickers">Stickers</string>
    <string name="shapes">Shapes</string>
    <string name="inches">Inches</string>
    <string name="centimeters">Centimeters</string>
</resources>