<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_text"
        android:icon="@drawable/ic_text_selector"
        android:title="@string/text" />

    <item
        android:id="@+id/nav_draw"
        android:icon="@drawable/ic_draw_selector"
        android:title="@string/draw" />

    <item
        android:id="@+id/nav_shapes"
        android:icon="@drawable/ic_shapes_selector"
        android:title="@string/shapes" />

    <item
        android:id="@+id/nav_images"
        android:icon="@drawable/ic_images_selector"
        android:title="@string/images" />

    <item
        android:id="@+id/nav_stickers"
        android:icon="@drawable/ic_stickers_selector"
        android:title="@string/stickers" />

    <item
        android:id="@+id/nav_layers"
        android:icon="@drawable/ic_layers_selector"
        android:title="@string/layers" />
</menu>
