<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home_selector"
        android:title="@string/home" />

    <item
        android:id="@+id/nav_templates"
        android:icon="@drawable/ic_templates_selector"
        android:title="@string/templates" />

    <item
        android:id="@+id/nav_add_images"
        android:enabled="false"
        android:title=""
        app:showAsAction="never" />

    <item
        android:id="@+id/nav_fav"
        android:icon="@drawable/ic_file_selector"
        android:title="@string/my_files" />

    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_setting_selector"
        android:title="@string/settings" />

</menu>
