<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_group_toggle_all"
        android:icon="@drawable/ic_group"
        android:title="@string/group_all"
        app:showAsAction="ifRoom"
        app:iconTint="@color/black"/>
    <item
        android:id="@+id/action_lock_toggle_all"
        android:icon="@drawable/ic_lock"
        android:title="@string/lock_all"
        app:showAsAction="ifRoom"
        app:iconTint="@color/black"/>
    <item
        android:id="@+id/action_visibility_toggle_all"
        android:icon="@drawable/ic_hide_pass"
        android:title="@string/hide_all"
        app:iconTint="@color/black"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_delete_all"
        android:icon="@drawable/ic_delete"
        android:title="@string/delete"
        app:iconTint="@color/black"
        app:showAsAction="ifRoom" />
</menu>
