<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/button_bg"
    android:backgroundTint="@color/white"
    android:layout_width="150dp"
    android:layout_height="wrap_content">

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        style="@style/PopupItemStyle"
        android:text="@string/source"
        android:paddingHorizontal="15dp"
        android:paddingVertical="8dp"
        android:id="@+id/source"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/contrast"/>

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        style="@style/PopupItemStyle"
        android:text="@string/normal"
        android:paddingHorizontal="15dp"
        android:paddingVertical="8dp"
        android:id="@+id/normal"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/contrast"/>

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        style="@style/PopupItemStyle"
        android:text="@string/darken"
        android:paddingHorizontal="15dp"
        android:paddingVertical="8dp"
        android:id="@+id/darken" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/contrast"/>

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        style="@style/PopupItemStyle"
        android:text="@string/lighten"
        android:paddingHorizontal="15dp"
        android:paddingVertical="8dp"
        android:id="@+id/lighten" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/contrast"/>

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        style="@style/PopupItemStyle"
        android:text="@string/multiply"
        android:paddingHorizontal="15dp"
        android:paddingVertical="8dp"
        android:id="@+id/multiply" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/contrast"/>

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        style="@style/PopupItemStyle"
        android:text="@string/screen"
        android:paddingHorizontal="15dp"
        android:paddingVertical="8dp"
        android:id="@+id/screen" />
</LinearLayout>
