<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/button_bg"
    android:backgroundTint="@color/white"
    android:layout_width="150dp"
    android:layout_height="wrap_content">

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        style="@style/PopupItemStyle"
        android:text="@string/export"
        android:paddingHorizontal="20dp"
        android:paddingVertical="8dp"
        android:id="@+id/actionExport"
        app:drawableEndCompat="@drawable/ic_export"
        app:drawableTint="@color/black"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/contrast"/>

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        style="@style/PopupItemStyle"
        android:paddingHorizontal="20dp"
        android:paddingVertical="8dp"
        android:text="@string/select"
        android:id="@+id/actionSelect"
        app:drawableEndCompat="@drawable/ic_select"
        app:drawableTint="@color/black" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/contrast"/>

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        style="@style/PopupItemStyle"
        android:paddingHorizontal="20dp"
        android:paddingVertical="8dp"
        android:text="@string/duplicate"
        android:id="@+id/actionDuplicate"
        app:drawableEndCompat="@drawable/ic_duplicate"
        app:drawableTint="@color/black" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/contrast"/>

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        style="@style/PopupItemStyle"
        android:text="@string/share"
        android:id="@+id/actionShare"
        android:paddingHorizontal="20dp"
        android:paddingVertical="8dp"
        app:drawableEndCompat="@drawable/ic_share"
        app:drawableTint="@color/black" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/contrast"/>

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        style="@style/PopupItemStyle"
        android:text="@string/rename"
        android:id="@+id/actionRename"
        android:paddingHorizontal="20dp"
        android:paddingVertical="8dp"
        app:drawableEndCompat="@drawable/ic_rename"
        app:drawableTint="@color/black"  />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/contrast"/>

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        style="@style/PopupItemStyle"
        android:text="@string/delete"
        android:paddingHorizontal="20dp"
        android:paddingVertical="8dp"
        app:drawableEndCompat="@drawable/ic_delete"
        app:drawableTint="@android:color/holo_red_dark"
        android:textColor="@android:color/holo_red_dark"
        android:id="@+id/actionDelete" />
</LinearLayout>
