<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    tools:context=".ui.auth.SignupFragment">

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1"
        android:id="@+id/topGuide"/>

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.95"
        android:orientation="horizontal"
        android:id="@+id/bottomGuide"/>

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.05"
        android:orientation="vertical"
        android:id="@+id/startGuide"/>

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.95"
        android:orientation="vertical"
        android:id="@+id/endGuide"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        app:layout_constraintStart_toEndOf="@id/startGuide"
        app:layout_constraintEnd_toStartOf="@id/endGuide"
        app:layout_constraintTop_toBottomOf="@id/topGuide"
        android:textSize="30sp"
        android:fontFamily="@font/bold"
        android:textColor="@color/appColor"
        android:id="@+id/title"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        app:layout_constraintStart_toEndOf="@id/startGuide"
        app:layout_constraintTop_toBottomOf="@id/title"
        android:textSize="12sp"
        android:fontFamily="@font/medium"
        android:textColor="@color/black"
        android:layout_marginTop="30dp"
        android:id="@+id/nameTV"/>

    <EditText
        android:layout_width="0dp"
        android:layout_height="50dp"
        app:layout_constraintStart_toEndOf="@id/startGuide"
        app:layout_constraintEnd_toStartOf="@id/endGuide"
        app:layout_constraintTop_toBottomOf="@id/nameTV"
        android:background="@drawable/edit_bg_stroke"
        android:fontFamily="@font/regular"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:maxLines="1"
        android:padding="12dp"
        android:inputType="textPersonName"
        android:id="@+id/name"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        app:layout_constraintStart_toEndOf="@id/startGuide"
        app:layout_constraintTop_toBottomOf="@id/name"
        android:textSize="12sp"
        android:fontFamily="@font/medium"
        android:textColor="@color/black"
        android:layout_marginTop="12dp"
        android:id="@+id/emailTV"/>

    <EditText
        android:layout_width="0dp"
        android:layout_height="50dp"
        app:layout_constraintStart_toEndOf="@id/startGuide"
        app:layout_constraintEnd_toStartOf="@id/endGuide"
        app:layout_constraintTop_toBottomOf="@id/emailTV"
        android:background="@drawable/edit_bg_stroke"
        android:fontFamily="@font/regular"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:maxLines="1"
        android:padding="12dp"
        android:inputType="textEmailAddress"
        android:id="@+id/email"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        app:layout_constraintStart_toEndOf="@id/startGuide"
        app:layout_constraintTop_toBottomOf="@id/email"
        android:textSize="12sp"
        android:fontFamily="@font/medium"
        android:textColor="@color/black"
        android:layout_marginTop="12dp"
        android:id="@+id/passwordTV"/>

    <EditText
        android:layout_width="0dp"
        android:layout_height="50dp"
        app:layout_constraintStart_toEndOf="@id/startGuide"
        app:layout_constraintEnd_toStartOf="@id/endGuide"
        app:layout_constraintTop_toBottomOf="@id/passwordTV"
        android:background="@drawable/edit_bg_stroke"
        android:fontFamily="@font/regular"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:padding="12dp"
        android:maxLines="1"
        android:inputType="textPassword"
        android:id="@+id/password"
        android:drawableEnd="@drawable/ic_show_pass"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm_password"
        app:layout_constraintStart_toEndOf="@id/startGuide"
        app:layout_constraintTop_toBottomOf="@id/password"
        android:textSize="12sp"
        android:fontFamily="@font/medium"
        android:textColor="@color/black"
        android:layout_marginTop="12dp"
        android:id="@+id/confirmPasswordTV"/>

    <EditText
        android:layout_width="0dp"
        android:layout_height="50dp"
        app:layout_constraintStart_toEndOf="@id/startGuide"
        app:layout_constraintEnd_toStartOf="@id/endGuide"
        app:layout_constraintTop_toBottomOf="@id/confirmPasswordTV"
        android:background="@drawable/edit_bg_stroke"
        android:fontFamily="@font/regular"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:padding="12dp"
        android:maxLines="1"
        android:inputType="textPassword"
        android:id="@+id/confirmPassword"
        android:drawableEnd="@drawable/ic_show_pass"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/verify_email"
        android:background="@drawable/button_bg"
        app:layout_constraintStart_toEndOf="@id/startGuide"
        app:layout_constraintEnd_toStartOf="@id/endGuide"
        app:layout_constraintTop_toBottomOf="@id/confirmPassword"
        android:textSize="15sp"
        android:layout_marginTop="19dp"
        android:fontFamily="@font/bold"
        android:textColor="@color/whiteText"
        android:gravity="center"
        android:paddingVertical="12dp"
        android:id="@+id/register"/>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/bottomGuide"
        app:layout_constraintEnd_toStartOf="@id/endGuide"
        app:layout_constraintStart_toEndOf="@id/startGuide"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_have_account"
            android:textSize="12sp"
            android:fontFamily="@font/medium"
            android:textColor="@color/black"
            android:paddingVertical="12dp"
            android:id="@+id/account"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:layout_marginStart="6dp"
            android:textSize="12sp"
            android:fontFamily="@font/medium"
            android:textColor="@color/appColor"
            android:paddingVertical="12dp"
            android:id="@+id/login"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>